# femtogen

./: README.md  csplot.py  elastics.py  femtogen.py  four_vector.py  graphtrace.py  pyproject.toml  requirements.txt  setup.cfg  xsx.py
.circleci/: config.yml
config/: config.ini
data/: cff.csv
docs/: README.rst
femtogen/: __init__.py  femtogen.py  test_femtogen.py
femtogen/.circleci/: config.yml
femtogen/log/: __init__.py  pylogger.py
femtogen/physics/: __init__.py  baseclass.py  unpolarized.py
femtogen/pymetric/: pymetric.py
metric/: __init__.py  pymetric.py
output/: cross_section.csv
