[metadata]
name = femtogen
version = 0.0.1
author = Joshua Hoskins
author_email = jrh4dy@gmail.com
description = Simple DVCS generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jrhosk/femtogen
project_urls =
    Bug Tracker = https://github.com/jrhosk/femtogen/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
		 matplotlib
		 numpy
		 pandas
		 scipy
		 tqdm